fixed styljing on playbutton for mobile as it was not centered

--- a/src/pages/videos/video-page.styles.scss
+++ b/src/pages/videos/video-page.styles.scss
@@ -13,9 +13,9 @@
 
     .playbutton {
       position: relative;
-      width: 80px;
-      top: 0;
-      left: 0;
+      width: 100px;
+      top: 38%;
+      left: 36%;
       .play-icon {
         width: 65px;
         height: 65px;
